--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 // GitHub API配置
 const GITHUB_API_BASE = 'https://api.github.com/repos/yimingriyue/shiyitiancheng/contents/';
 const CDN_CONFIG = {
-  jsdelivr: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+  jsdelivr: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
   raw: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/'
 };
 
