--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>诗意天城 - 云端诗意画廊</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fontsapi.zeoseven.com" crossorigin>
+    <link rel="preconnect" href="https://fontsapi-storage.zeoseven.com" crossorigin>
+    <link rel="stylesheet" href="https://fontsapi.zeoseven.com/94/main/result.css" id="main-font">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Noto Serif SC', 'SimSun', 'STKaiti', serif;
+            font-family: "LXGW WenKai Mono GB", 'SimSun', 'STKaiti', serif;
         }
         
         body {
+        font-weight: normal;
             background: linear-gradient(135deg, #e6f7ff 0%, #f0e6ff 100%);
             color: #333;
             line-height: 1.6;
