--- a/index.html
+++ b/index.html
@@ -685,8 +685,13 @@ async function initGallery() {
             throw new Error('未在仓库中找到图片文件');
         }
         
-        // 按日期排序（新的在前）
-        allImages.sort((a, b) => new Date(b.updated_at || b.created_at) - new Date(a.updated_at || a.created_at));
+        // 按更新时间倒序排序（最新的在前）
+        allImages.sort((a, b) => {
+            // 优先使用 updated_at，如果没有则使用 created_at
+            const dateA = new Date(a.updated_at || a.created_at);
+            const dateB = new Date(b.updated_at || b.created_at);
+            return dateB - dateA; // 倒序：最新的在前
+        });
         
         // 初始加载图片
         loadImages();
