--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
             100% { transform: translateX(0) translateY(0); }
         }
         
-        header {
-            background: linear-gradient(135deg, rgba(106, 17, 203, 0.9) 0%, rgba(37, 117, 252, 0.9) 100%);
-            color: white;
-            text-align: center;
-            padding: 4rem 1rem 3rem;
-            margin-bottom: 2rem;
-            position: relative;
-            overflow: hidden;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-        }
+header {
+    background: linear-gradient(135deg, rgba(106, 17, 203, 0.9) 0%, rgba(37, 117, 252, 0.9) 100%);
+    color: white;
+    text-align: center;
+    padding: 2rem 1rem 1.5rem; /* 修改这里 */
+    margin-bottom: 2rem;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+}
         
         header::before {
             content: "";
