--- a/index.html
+++ b/index.html
@@ -735,38 +735,38 @@ header {
             // 使用硬编码的图片数据作为备用
             imageData = [
                 {
-                    "path": "shiyitiancheng/文王八卦图.webp",
-                    "name": "文王八卦图.webp",
+                    "path": "shiyitiancheng/文王八卦图.jpg",
+                    "name": "文王八卦图.jpg",
                     "time": "2025-01-01 12:05"
                 },
                 {
-                    "path": "shiyitiancheng/2025/太阳系.webp",
-                    "name": "太阳系.webp",
+                    "path": "shiyitiancheng/2025/太阳系.jpg",
+                    "name": "太阳系.jpg",
                     "time": "2025-01-01 12:10"
                 },
                 {
-                    "path": "shiyitiancheng/2025/妄想学生会.webp",
-                    "name": "妄想学生会.webp",
+                    "path": "shiyitiancheng/2025/妄想学生会.jpg",
+                    "name": "妄想学生会.jpg",
                     "time": "2025-01-01 12:15"
                 },
                 {
-                    "path": "shiyitiancheng/2025/胡桃.webp",
-                    "name": "胡桃.webp",
+                    "path": "shiyitiancheng/2025/胡桃.jpg",
+                    "name": "胡桃.jpg",
                     "time": "2025-01-01 12:20"
                 },
                 {
-                    "path": "shiyitiancheng/2025/芙莉莲.webp",
-                    "name": "芙莉莲.webp",
+                    "path": "shiyitiancheng/2025/芙莉莲.jpg",
+                    "name": "芙莉莲.jpg",
                     "time": "2025-01-01 12:25"
                 },
                 {
-                    "path": "shiyitiancheng/2025/英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.webp",
-                    "name": "英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.webp",
+                    "path": "shiyitiancheng/2025/英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.jpg",
+                    "name": "英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.jpg",
                     "time": "2025-01-01 12:30"
                 },
                 {
-                    "path": "shiyitiancheng/2025/酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..webp",
-                    "name": "酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..webp",
+                    "path": "shiyitiancheng/2025/酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..jpg",
+                    "name": "酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..jpg",
                     "time": "2025-01-01 12:35"
                 },
                 {
@@ -838,6 +838,7 @@ card.innerHTML = `
             return CDN_CONFIG.jsdelivr + encodeURI(path);
         }
 
+        // 格式化图片名称
 // 格式化图片名称
 function formatImageName(name) {
     // 移除文件扩展名
