--- a/index.html
+++ b/index.html
@@ -734,38 +734,38 @@ header {
             // 使用硬编码的图片数据作为备用
             imageData = [
                 {
-                    "path": "shiyitiancheng/文王八卦图.jpg",
-                    "name": "文王八卦图.jpg",
+                    "path": "shiyitiancheng/文王八卦图.webp",
+                    "name": "文王八卦图.webp",
                     "time": "2025-01-01 12:05"
                 },
                 {
-                    "path": "shiyitiancheng/2025/太阳系.jpg",
-                    "name": "太阳系.jpg",
+                    "path": "shiyitiancheng/2025/太阳系.webp",
+                    "name": "太阳系.webp",
                     "time": "2025-01-01 12:10"
                 },
                 {
-                    "path": "shiyitiancheng/2025/妄想学生会.jpg",
-                    "name": "妄想学生会.jpg",
+                    "path": "shiyitiancheng/2025/妄想学生会.webp",
+                    "name": "妄想学生会.webp",
                     "time": "2025-01-01 12:15"
                 },
                 {
-                    "path": "shiyitiancheng/2025/胡桃.jpg",
-                    "name": "胡桃.jpg",
+                    "path": "shiyitiancheng/2025/胡桃.webp",
+                    "name": "胡桃.webp",
                     "time": "2025-01-01 12:20"
                 },
                 {
-                    "path": "shiyitiancheng/2025/芙莉莲.jpg",
-                    "name": "芙莉莲.jpg",
+                    "path": "shiyitiancheng/2025/芙莉莲.webp",
+                    "name": "芙莉莲.webp",
                     "time": "2025-01-01 12:25"
                 },
                 {
-                    "path": "shiyitiancheng/2025/英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.jpg",
-                    "name": "英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.jpg",
+                    "path": "shiyitiancheng/2025/英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.webp",
+                    "name": "英仙座流星雨，下面是史前巨石阵 摄影师Josh Dury.webp",
                     "time": "2025-01-01 12:30"
                 },
                 {
-                    "path": "shiyitiancheng/2025/酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..jpg",
-                    "name": "酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..jpg",
+                    "path": "shiyitiancheng/2025/酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..webp",
+                    "name": "酣酣日脚紫烟浮,妍暖破轻裘.困人天色,醉人花气,午梦扶头.春慵恰似春塘水,一片縠纹愁.溶溶泄泄,东风无力,欲皱还休..webp",
                     "time": "2025-01-01 12:35"
                 },
                 {
