--- a/index.html
+++ b/index.html
@@ -589,8 +589,8 @@ header {
         // CDN配置 - 使用多个CDN备用
 const CDN_CONFIG = {
     primary: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
-    gcore: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
-    fastly: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+    gcore: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+    fastly: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
     testing: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/'
 };
 
