--- a/jiutu2/index.html
+++ b/jiutu2/index.html
@@ -588,10 +588,10 @@ header {
     <script>
         // CDN配置 - 使用多个CDN备用
 const CDN_CONFIG = {
-    primary: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
-    gcore: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
-    fastly: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
-    testing: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/'
+    primary: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/jiutu2/',
+    gcore: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/jiutu2/',
+    fastly: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/jiutu2/',
+    testing: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/jiutu2/'
 };
 
 // 当前CDN索引
@@ -634,7 +634,7 @@ let currentCDN = 'primary';
         async function loadImageData() {
             try {
                 // 尝试从JSON文件加载图片数据
-                const response = await fetch('index.json');
+                const response = await fetch('jiutu2/index.json');
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
