--- a/jiutu2/index.html
+++ b/jiutu2/index.html
@@ -588,10 +588,10 @@ header {
     <script>
         // CDN配置 - 使用多个CDN备用
 const CDN_CONFIG = {
-    primary: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/jiutu2/',
-    gcore: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/jiutu2/',
-    fastly: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/jiutu2/',
-    testing: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/jiutu2/'
+    primary: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+    gcore: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+    fastly: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+    testing: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/'
 };
 
 // 当前CDN索引
