--- a/jiutu2/index.html
+++ b/jiutu2/index.html
@@ -329,7 +329,7 @@ header {
             color: #2575fc;
         }
         
-  /* 图片预览模态框样式 */
+/* 图片预览模态框样式 */
 .modal {
     display: none;
     position: fixed;
@@ -338,7 +338,7 @@ header {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.95);
+    background-color: rgba(0, 0, 0, 0.98); /* 加深背景 */
     animation: fadeIn 0.3s ease;
 }
 
@@ -351,54 +351,31 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 0; /* 关键修改：去掉padding */
 }
 
 .modal-content {
-    max-width: calc(100vw - 40px);
-    max-height: calc(100vh - 40px);
+    max-width: 100vw;   /* 关键修改：100%视口宽度 */
+    max-height: 100vh;  /* 关键修改：100%视口高度 */
     width: auto;
     height: auto;
-    object-fit: contain;
-    border-radius: 8px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
-}
-
-.modal-close {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    color: #fff;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: color 0.3s;
-    z-index: 1001;
-    background: rgba(0, 0, 0, 0.5);
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-close:hover {
-    color: #6a11cb;
-    background: rgba(0, 0, 0, 0.8);
+    object-fit: contain; /* 保持图片比例 */
+    border-radius: 0;    /* 关键修改：去掉圆角 */
+    box-shadow: none;    /* 关键修改：去掉阴影 */
 }
 
 .modal-title {
     position: absolute;
-    bottom: 20px;
+    bottom: 0;          /* 修改：贴底部 */
     left: 0;
     width: 100%;
     text-align: center;
     color: white;
     font-size: 1.2rem;
-    padding: 15px;
-    background: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(10px);
+    margin: 0;          /* 确保没有外边距 */
 }
 
 .modal-nav {
