--- a/jiutu2/index.html
+++ b/jiutu2/index.html
@@ -653,6 +653,7 @@
             primary: 'https://gcore.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
             gcore: 'https://cdn.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
             fastly: 'https://fastly.jsdelivr.net/gh/yimingriyue/shiyitiancheng@main/',
+    testing: 'https://raw.githubusercontent.com/yimingriyue/shiyitiancheng/main/'
         };
 
         let currentCDN = 'primary';
