--- a/index.html
+++ b/index.html
@@ -600,6 +600,14 @@
         font-size: 1.2rem;
     }
 }
+    .card-title {
+        font-size: 1.2rem !important; /* 使用!important确保覆盖默认样式 */
+        line-height: 1.2;
+        margin-bottom: 4px;
+        padding-bottom: 4px;
+    }
+}
+
     </style>
 </head>
 <body>
