--- a/index.html
+++ b/index.html
@@ -517,6 +517,12 @@
                 width: 45px;
                 height: 45px;
             }
+                .card-title {
+        font-size: 1.2rem !important; /* 使用!important确保覆盖默认样式 */
+        line-height: 1.2;
+        margin-bottom: 4px;
+        padding-bottom: 4px;
+    }
         }
         
         @media (max-width: 480px) {
@@ -531,6 +537,12 @@
             h1 {
                 font-size: 2rem;
             }
+                .card-title {
+        font-size: 1.1rem !important;
+        line-height: 1.1;
+        margin-bottom: 3px;
+        padding-bottom: 3px;
+    }
         }
         
         /* 卷轴效果 */
@@ -600,13 +612,7 @@
         font-size: 1.2rem;
     }
 }
-    .card-title {
-        font-size: 1.2rem !important; /* 使用!important确保覆盖默认样式 */
-        line-height: 1.2;
-        margin-bottom: 4px;
-        padding-bottom: 4px;
-    }
-}
+
 
     </style>
 </head>
