--- a/jiutu2/index.html
+++ b/jiutu2/index.html
@@ -750,6 +750,10 @@
             scrollToTop.addEventListener('click', function() {
                 window.scrollTo({ top: 0, behavior: 'smooth' });
             });
+            // 返回首页按钮事件 
+            homeButton.addEventListener('click', function() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
         });
 
         // 加载图片数据
